--- a/index.html
+++ b/index.html
@@ -116,36 +116,8 @@
 </div>
 
 <div id="Cities-Comparison" class="tab-content">
-    <div class="comparison-container">
-        <h2>Select Cities for Comparison</h2>
-        <div id="city-checkboxes" class="city-selection"></div>
-
-               <div class="buttons-container">
-            <button id="compare-btn" class="action-btn">Compare Selected Cities</button>
-            <button id="reset-btn" class="action-btn">Reset Selection</button>
-        </div>
-
-        <!-- Radar Chart -->
-        <h3>Breakdown of Mobility Solutions by City</h3>
-        <div id="chart-container">
-            <canvas id="comparison-chart" width="400" height="400"></canvas>
-        </div>
-
-        <!-- Bar Chart for Average Comparison -->
-        <h3>Average Mobility Solution Scores by City</h3>
-        <div id="bar-chart-container">
-            <canvas id="bar-chart" width="400" height="400"></canvas>
-        </div>
-
-        <!-- Clustered Bar Chart for Mobility Solutions Across Cities -->
-        <h3>Mobility Solutions Comparison Across Cities</h3>
-        <div id="clustered-bar-chart-container">
-            <canvas id="clustered-bar-chart" width="400" height="400"></canvas>
-        </div>
-
-    </div>
+    <!-- Περιεχόμενο του Cities-Comparison -->
 </div>
-
 
 <div id="Smart-Suggestions" class="tab-content">
     <h2>Find Similar Cities</h2>
@@ -161,6 +133,7 @@
 
     <div id="results"></div>
 </div>
+
 
 
 </div>
