--- a/index.html
+++ b/index.html
@@ -540,7 +540,13 @@
         displayCityData();
     </script>
     <script src="smartSuggestions.js"></script>
-
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("sw.js")
+      .then(() => console.log("Service Worker Registered"))
+      .catch((err) => console.log("Service Worker Failed", err));
+  }
+</script>
 </body>
 </html>
 
