--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
     <div class="sticky-header">
     <div class="header-title">
-        <img src="logo.png" alt="Company Logo" class="logo">
+    <img src="icon-512x512.png" alt="Company Logo" class="logo">
         <h1>Smart City Mobility Solutions</h1>
     </div>
     <div class="navbar">
