--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
         <a href="#" class="tab-link" onclick="openTab(event, 'Smart-Suggestions')">Smart Suggestions</a>
     </div>
 </div>
+<!-- 📲 Κουμπί για εγκατάσταση PWA -->
+<button id="install-button" style="display: none; padding: 10px 20px; background-color: #00b0ff; color: white; border: none; cursor: pointer; margin: 10px auto; display: block;">📲 Install App</button>
 
 <div id="Histograms" class="tab-content active-content">
     <div id="city-data-container"></div>
