--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
         <a href="#" class="tab-link" onclick="openTab(event, 'Smart-Suggestions')">Smart Suggestions</a>
     </div>
 </div>
- <!-- 📲 Κουμπί για εγκατάσταση PWA -->
-    <div style="text-align: center; margin-top: 10px;">
-        <button id="install-button">📲 Install App</button>
-    </div>
+<!-- 📲 Κουμπί για εγκατάσταση PWA -->
+<div style="display: flex; justify-content: center; margin-top: 15px;">
+    <button id="install-button">📲 Install App</button>
+</div>
+
 <div id="Histograms" class="tab-content active-content">
     <div id="city-data-container"></div>
     <button id="load-more">Load More</button>
