--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
             padding: 10px 20px;
             border-bottom: 2px solid #00b0ff;
         }
+         /* 📲 Στυλ για το κουμπί εγκατάστασης */
+        #install-button {
+            display: none;
+            padding: 15px 25px;
+            background-color: #00b0ff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin: 20px auto;
+            border-radius: 10px;
+            font-size: 18px;
+            font-weight: bold;
+            transition: background-color 0.3s, transform 0.2s;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+        }
+        #install-button:hover {
+            background-color: #007bbf;
+            transform: scale(1.08);
+        }
+    </style>
+</head>
         .header-title {
             display: flex;
             align-items: center;
