--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
          /* 📲 Στυλ για το κουμπί εγκατάστασης */
         #install-button {
-            display: none;
+            display: block;
             padding: 15px 25px;
             background-color: #00b0ff;
             color: white;
