--- a/index.html
+++ b/index.html
@@ -570,6 +570,30 @@
       .catch((err) => console.log("Service Worker Failed", err));
   }
 </script>
+    <script>
+    let deferredPrompt;
+
+    window.addEventListener("beforeinstallprompt", (event) => {
+        event.preventDefault();
+        deferredPrompt = event;
+
+        const installButton = document.getElementById("install-button");
+        installButton.style.display = "block";
+
+        installButton.addEventListener("click", () => {
+            deferredPrompt.prompt();
+            deferredPrompt.userChoice.then((choiceResult) => {
+                if (choiceResult.outcome === "accepted") {
+                    console.log("User accepted the install prompt");
+                } else {
+                    console.log("User dismissed the install prompt");
+                }
+                deferredPrompt = null;
+            });
+        });
+    });
+</script>
+
 </body>
 </html>
 
