--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
     <img src="icon-512x512.png" alt="Company Logo" class="logo">
         <h1>Smart City Mobility Solutions</h1>
     </div>
+         <div class="install-container">
+        <button id="install-button">📲 Install App</button>
+    </div>
     <div class="navbar">
         <a href="#" class="tab-link active-tab" onclick="openTab(event, 'Histograms')">Histograms</a>
         <a href="#" class="tab-link" onclick="openTab(event, 'Cities-Comparison')">Cities-Comparison</a>
         <a href="#" class="tab-link" onclick="openTab(event, 'Smart-Suggestions')">Smart Suggestions</a>
     </div>
 </div>
-<!-- 📲 Κουμπί για εγκατάσταση PWA -->
-<div style="display: flex; justify-content: center; margin-top: 15px;">
-    <button id="install-button">📲 Install App</button>
-</div>
+
 
 <div id="Histograms" class="tab-content active-content">
     <div id="city-data-container"></div>
