--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ window.addEventListener("load", () => {
                 deferredPrompt = null;
             });
         } else {
-            alert("Installation is not supported in your browser.");
+            alert("Installation has been already downloaded.");
         }
     });
 </script>
