--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
             gap: 10px;
         }
         .logo {
+    width: 15vw; /* Προσαρμόζει το μέγεθος ανάλογα με το πλάτος της οθόνης */
+    height: auto; /* Διατηρεί την αναλογία της εικόνας */
+}
+
+        .logo {
             width: 200px;
             height: 60px;
         }
