--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
 
 <div id="Histograms" class="tab-content active-content">
     <div id="city-data-container"></div>
+<p id="data-explanation" style="font-style: italic;"></p>
+
     <button id="load-more">Load More</button>
 </div>
 
