--- a/index.html
+++ b/index.html
@@ -458,79 +458,52 @@
         const citiesPerPage = 5;
 
         function displayCityData() {
-            const container = document.getElementById('city-data-container');
-            const end = Math.min(displayedCities + citiesPerPage, cityData.length);
+    const container = document.getElementById('city-data-container');
+    container.innerHTML = ""; // Καθαρίζουμε το container για να μην διπλασιάζονται οι πόλεις
+    const end = Math.min(displayedCities + citiesPerPage, cityData.length);
 
-            for (let i = displayedCities; i < end; i++) {
-                const city = cityData[i];
-                const cityDiv = document.createElement('div');
-                cityDiv.className = 'city-container';
+    for (let i = displayedCities; i < end; i++) {
+        const city = cityData[i];
+        const cityDiv = document.createElement('div');
+        cityDiv.className = 'city-container';
 
-                const cityInfoDiv = document.createElement('div');
-                cityInfoDiv.className = 'city-info';
+        const cityInfoDiv = document.createElement('div');
+        cityInfoDiv.className = 'city-info';
 
-                const cityTitle = document.createElement('div');
-                cityTitle.className = 'city-title';
+        const cityTitle = document.createElement('div');
+        cityTitle.className = 'city-title';
+        cityTitle.innerHTML = `<strong>${city.city}, ${city.country}</strong>`;
 
-                if (city.country_code) {
-                    const flagImg = document.createElement('img');
-                    flagImg.src = `https://flagpedia.net/data/flags/h80/${city.country_code.toLowerCase()}.png`;
-                    flagImg.alt = `${city.country} flag`;
-                    flagImg.style.width = '20px';
-                    flagImg.style.marginRight = '8px';
-                    cityTitle.appendChild(flagImg);
-                }
+        cityInfoDiv.appendChild(cityTitle);
 
-                cityTitle.appendChild(document.createTextNode(`${city.city}, ${city.country}`));
-                cityInfoDiv.appendChild(cityTitle);
-
-                const createdAt = document.createElement('div');
-                createdAt.textContent = `Data Created At: ${city.created_at || 'N/A'}`;
-                cityInfoDiv.appendChild(createdAt);
-
-                const mobilitySolutionsTitle = document.createElement('div');
-                mobilitySolutionsTitle.textContent = 'Mobility Solutions:';
-                cityInfoDiv.appendChild(mobilitySolutionsTitle);
-
-                const mobilitySolutions = document.createElement('ul');
-                for (const [solution, value] of Object.entries(city.mobility_solutions)) {
-                    const solutionItem = document.createElement('li');
-                    solutionItem.textContent = `${solution}: ${value}%`;
-                    mobilitySolutions.appendChild(solutionItem);
-                }
-                cityInfoDiv.appendChild(mobilitySolutions);
-
-                const trafficCongestion = document.createElement('div');
-                trafficCongestion.textContent = `Traffic Congestion Not a Problem: ${city.traffic_congestion_not_a_problem}%`;
-                cityInfoDiv.appendChild(trafficCongestion);
-
-                const publicTransport = document.createElement('div');
-                publicTransport.textContent = `Public Transport Satisfactory: ${city.public_transport_satisfactory}%`;
-                cityInfoDiv.appendChild(publicTransport);
-
-                const smartCityRanking = document.createElement('div');
-                smartCityRanking.textContent = `Smart City Ranking: ${city.smart_city_ranking}`;
-                cityInfoDiv.appendChild(smartCityRanking);
-
-                cityDiv.appendChild(cityInfoDiv);
-
-                const chartContainer = document.createElement('div');
-                chartContainer.className = 'chart-container';
-                const chartCanvas = document.createElement('canvas');
-                chartCanvas.id = `chart-${i}`;
-                chartContainer.appendChild(chartCanvas);
-                cityDiv.appendChild(chartContainer);
-
-                container.appendChild(cityDiv);
-
-                createHistogram(chartCanvas.id, city.mobility_solutions);
-            }
-
-            displayedCities += citiesPerPage;
-            if (displayedCities >= cityData.length) {
-                document.getElementById('load-more').style.display = 'none';
-            }
+        // Προσθήκη της εξηγηματικής πρότασης ΜΟΝΟ στην καρτέλα "Histograms"
+        if (document.getElementById('Histograms').classList.contains('active-content')) {
+            const explanation = document.createElement('p');
+            explanation.innerHTML = "📌 Τα παρακάτω ποσοστά αντικατοπτρίζουν την άποψη των κατοίκων της πόλης σχετικά με την κινητικότητα και τις δημόσιες συγκοινωνίες.";
+            explanation.style.fontStyle = "italic";
+            cityInfoDiv.appendChild(explanation);
         }
+
+        // Προσθήκη των δεδομένων
+        const trafficCongestion = document.createElement('div');
+        trafficCongestion.textContent = `Traffic Congestion Not a Problem: ${city.traffic_congestion_not_a_problem}%`;
+        cityInfoDiv.appendChild(trafficCongestion);
+
+        const publicTransport = document.createElement('div');
+        publicTransport.textContent = `Public Transport Satisfactory: ${city.public_transport_satisfactory}%`;
+        cityInfoDiv.appendChild(publicTransport);
+
+        cityDiv.appendChild(cityInfoDiv);
+        container.appendChild(cityDiv);
+    }
+
+    displayedCities += citiesPerPage;
+
+    if (displayedCities >= cityData.length) {
+        document.getElementById('load-more').style.display = 'none';
+    }
+}
+
 function showToast(message) {
     const toast = document.getElementById("toast-notification");
     toast.textContent = message;
