--- a/index.html
+++ b/index.html
@@ -477,12 +477,11 @@
         cityInfoDiv.appendChild(cityTitle);
 
         // Προσθήκη της εξηγηματικής πρότασης ΜΟΝΟ στην καρτέλα "Histograms"
-        if (document.getElementById('Histograms').classList.contains('active-content')) {
-            const explanation = document.createElement('p');
-            explanation.innerHTML = "📌 Τα παρακάτω ποσοστά αντικατοπτρίζουν την άποψη των κατοίκων της πόλης σχετικά με την κινητικότητα και τις δημόσιες συγκοινωνίες.";
-            explanation.style.fontStyle = "italic";
-            cityInfoDiv.appendChild(explanation);
-        }
+if (document.getElementById('Histograms').classList.contains('active-content')) {
+    const explanationDiv = document.getElementById('data-explanation');
+    explanationDiv.innerHTML = "📌 <em>Τα παρακάτω ποσοστά αντικατοπτρίζουν την άποψη των κατοίκων της πόλης σχετικά με την κινητικότητα και τις δημόσιες συγκοινωνίες.</em>";
+}
+
 
         // Προσθήκη των δεδομένων
         const trafficCongestion = document.createElement('div');
