--- a/index.html
+++ b/index.html
@@ -167,9 +167,13 @@
 </div>
 
 <div id="Histograms" class="tab-content active-content">
+    <p id="data-explanation" style="font-style: italic; display: none;">
+        📌 Τα παρακάτω ποσοστά αντικατοπτρίζουν την άποψη των κατοίκων της πόλης σχετικά με την κινητικότητα και τις δημόσιες συγκοινωνίες.
+    </p>
     <div id="city-data-container"></div>
     <button id="load-more">Load More</button>
 </div>
+
 
 <div id="Cities-Comparison" class="tab-content">
     <div class="comparison-container">
