--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 <div id="Histograms" class="tab-content active-content">
     <p id="data-explanation" style="font-style: italic; display: none;">
-        📌 Τα παρακάτω ποσοστά αντικατοπτρίζουν την άποψη των κατοίκων της πόλης σχετικά με την κινητικότητα και τις δημόσιες συγκοινωνίες.
+        📌The following data represents the perceptions of local residents on urban mobility and the efficiency of public transportation in their city.
     </p>
     <div id="city-data-container"></div>
     <button id="load-more">Load More</button>
